cleanup blob after choose avatar avoid memory leak

--- a/src/pages/Admin/Admin.module.scss
+++ b/src/pages/Admin/Admin.module.scss
@@ -9,4 +9,9 @@
   height: 100px;
   object-fit: cover;
   border-radius: 50%;
+  cursor: pointer;
+}
+label {
+  margin: 10px 0px;
+  display: flex;
 }
