chore: rename misspelled variable

--- a/src/pages/New/New.module.scss
+++ b/src/pages/New/New.module.scss
@@ -12,7 +12,7 @@
   margin-bottom: 0.5em;
 }
 
-.paginarion {
+.pagination {
   display: inline-block;
   border: 1px solid #000000;
   padding: 2px 4px;
