--- a/src/pages/Redux/ExampleToDo/ExampleToDo.module.scss
+++ b/src/pages/Redux/ExampleToDo/ExampleToDo.module.scss
@@ -1,5 +1,12 @@
 .container {
-  margin: 20px;
-  max-width: 80%;
-  max-height: 80%;
+  margin: 15px;
+  max-width: 90%;
+  max-height: 90%;
+}
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 450px;
+  gap: 10px;
+  margin: 0 auto;
 }
