update CSS to do card

--- a/src/components/TodoCard/TodoCard.module.scss
+++ b/src/components/TodoCard/TodoCard.module.scss
@@ -60,7 +60,7 @@
 }
 
 /* 5. Hiển thị dấu tích khi checkbox được CHECKED */
-.checkbox:checked + .checkboxLabel::after {
+.isCompleted .checkboxLabel::after {
   content: "✓";
   background-color: transparent;
   text-align: center;
