--- a/src/components/Button/CommonButton/CommonButton.module.scss
+++ b/src/components/Button/CommonButton/CommonButton.module.scss
@@ -1,3 +1,8 @@
+:root {
+  --btn-text: #fff;
+  --btn-bg: #2684e9;
+}
+
 .button {
   box-sizing: border-box;
   padding: 12px 24px;
@@ -12,9 +17,9 @@
   text-decoration: none;
 
   &:hover:not(.disabled) {
-    background: #2684e9;
-    color: white;
-    border: 1.5px solid #2684e9;
+    background: var(--btn-bg);
+    color: var(--btn-text);
+    border: 1.5px solid var(--btn-bg);
   }
 
   &.round {
